<resources>
    <string name="app_name">Proyecto integrador TM</string>
    <string name="tvLoginText">LOGIN</string>
    <string name="tvRegisterText">REGISTER</string>
    <string name="etEmailHint">Ingresa tu email</string>
    <string name="etUsernameHint">Nombre</string>
    <string name="etUserSurnameHint">Apellido</string>
    <string name="etPasswordHint">Password</string>
    <string name="tvForgotPasswordText">Olvidaste la password?</string>
    <string name="tvAlreadyAUser">Ya estas registrado? Inicia sesion</string>

    <!--Home screen titles-->
    <string name="shoesTitle">Zapatillas</string>
    <string name="shirtsTitle">Remeras</string>
    <string name="pantsTitle">Pantalones</string>
    <string name="jacketTitle">Camperas</string>

    <!--Cart screen titles-->
    <string name="fabPayTitle">Pagar ahora</string>
    <string name="btnDeleteText">Eliminar</string>

    <string name="addToCart">Añadir al carrito</string>
    <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ut mattis augue. In ut ante dignissim, viverra ligula vitae, ultricies ante. Phasellus et leo sit amet nulla rutrum egestas. Nunc ornare sapien nec rutrum finibus. Aliquam vulputate mi congue massa ultricies, a elementum erat lacinia. Nullam egestas arcu nec placerat laoreet. Morbi mollis nec leo et hendrerit. Sed et metus id nisi iaculis aliquet. Ut sit amet est leo.</string>

    <!--Forgot password screen titles-->
    <string name="forgotPasswordTitle">Haz olvidado la contraseña?</string>
    <string name="btnSubmitText">Enviar</string>
    <string name="toLoginText">Volver al login</string>
    <string name="btnSave">Guardar</string>

</resources>