<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:id="@+id/main_linear_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:text="@string/tvLoginText"
            android:textColor="#000"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/etEmailHint"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColorHint="#c2c2c2" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/etPasswordHint"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColorHint="#c2c2c2" />

        <CheckBox
            android:id="@+id/cbRememberEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Recordar correo?"
            android:gravity="center" />

        <CheckBox
            android:id="@+id/cbKeepLoggedIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Mantener sesion iniciada?"
            android:gravity="center" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingHorizontal="50dp"
            android:text="@string/tvLoginText" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingHorizontal="50dp"
            android:text="@string/tvRegisterText" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvForgotPasswordText"
            android:textColor="@color/purple_200"
            android:textSize="20sp">

        </TextView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>