<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:id="@+id/main_linear_layout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:text="@string/tvRegisterText"
            android:textColor="#000"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/etUsernameHint"
            android:inputType="text"
            android:textAlignment="center"
            android:textColorHint="#c2c2c2" />

        <TextView
            android:id="@+id/tvUsernameErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textColor="@color/red"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/etEmailHint"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColorHint="#c2c2c2" />

        <TextView
            android:id="@+id/tvEmailErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textColor="@color/red"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/etPasswordHint"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColorHint="#c2c2c2" />

        <TextView
            android:id="@+id/tvPasswordErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textColor="@color/red"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="25dp">

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/tvRegisterText" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvAlreadyAUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvAlreadyAUser"
            android:textColor="@color/purple_200"
            android:textSize="16sp">

        </TextView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>